--- a/Assisted-project-4/.project
+++ b/Assisted-project-4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>01mywork</name>
+	<name>Assisted-project-4</name>
 	<comment></comment>
 	<projects>
 	</projects>
