--- a/practice-project-01/.project
+++ b/practice-project-01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assisted-project-2</name>
+	<name>practice-project-01</name>
 	<comment></comment>
 	<projects>
 	</projects>
